<resources>
    <string name="app_name">menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_author">pikachu</string>
    <string name="app_f3_title">发现喵喵</string>
    <string name="app_home_f1">首页</string>
    <string name="app_home_f2">分类</string>
    <string name="app_home_f3">我的</string>
    <string name="app_home_zao">早餐</string>
    <string name="app_home_wu">午餐</string>
    <string name="app_home_wan">晚餐</string>
    <string name="app_home_ye">夜宵</string>
    <string name="app_home_cai">菜谱分类</string>
    <string name="app_home_pai">人气排行</string>
    <string name="app_home_tui">推荐</string>
    <string name="app_home_rou">推荐肉食</string>
    <string name="app_home_shi">时令菜</string>
    <string name="app_refuel">日出东方催人醒，不及晚霞懂我心</string>
    <string name="app_home_keep">我的收藏</string>
    <string name="app_look_1">烹饪方法</string>
    <string name="app_look_2">口味</string>
    <string name="app_look_3">时间</string>
    <string name="app_look_4">热量</string>
    <string name="app_look_5">难度</string>
    <string name="app_look_z">主料</string>
    <string name="app_look_fu">辅料</string>
</resources>