<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.to.aboomy.pager2banner.Banner
        android:id="@+id/f1_h_banner"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:id="@+id/f1_h_lin1">
            <com.pikachu.menu.widget.QMUIRadiusImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_home_zao"/>
            <TextView
                android:layout_marginTop="6dp"
                android:theme="@style/index_text_bottom2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_home_zao"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:id="@+id/f1_h_lin2">
            <com.pikachu.menu.widget.QMUIRadiusImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_home_wu"/>
            <TextView
                android:layout_marginTop="6dp"
                android:theme="@style/index_text_bottom2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_home_wu"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:id="@+id/f1_h_lin3">
            <com.pikachu.menu.widget.QMUIRadiusImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_home_wan"/>
            <TextView
                android:layout_marginTop="6dp"
                android:theme="@style/index_text_bottom2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_home_wan"/>
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:id="@+id/f1_h_lin4">
            <com.pikachu.menu.widget.QMUIRadiusImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_home_ye"/>
            <TextView
                android:layout_marginTop="6dp"
                android:theme="@style/index_text_bottom2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_home_ye"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:id="@+id/f1_h_lin5">
            <com.pikachu.menu.widget.QMUIRadiusImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_home_cai"/>
            <TextView
                android:layout_marginTop="6dp"
                android:theme="@style/index_text_bottom2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_home_cai"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:id="@+id/f1_h_lin6">
            <com.pikachu.menu.widget.QMUIRadiusImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_home_pai" />
            <TextView
                android:layout_marginTop="6dp"
                android:theme="@style/index_text_bottom2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_home_pai"/>
        </LinearLayout>


    </LinearLayout>






    <TextView
        android:layout_marginTop="26dp"
        android:layout_marginStart="10dp"
        android:theme="@style/index_text_bottom3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_home_tui"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/dp_10"/>



</LinearLayout>
